--- a/AsapMovie/Pages/MoviesToCategorizePage.xaml
+++ b/AsapMovie/Pages/MoviesToCategorizePage.xaml
@@ -2,7 +2,7 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AsapMovie.Pages.MoviesToCategorize">
+             x:Class="AsapMovie.Pages.MoviesToCategorizePage">
     <ContentPage.Content>
         
     </ContentPage.Content>
